--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul>
                     <li><a href="#"></a></li>
                     <li><a href="#">ABOUT</a></li>
-                    <li><a href="../LAST2/index.html">SHOP</a></li>
+                    <li><a href="/20250409/LAST2/index.html">SHOP</a></li>
                     <li><a href="#">FAQ</a></li>
                     <li><a href="#">LOOK BOOK</a></li>
                 </ul>
