--- a/LAST2/index.html
+++ b/LAST2/index.html
@@ -17,7 +17,7 @@
         <div class="logo">SEASON KIDS</div>
         <nav class="nav-menu">
             <ul>
-                <li><a href="/20250409/last/index.html">HOME</a></li>
+                <li><a href="/">HOME</a></li>
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="index.html">SHOP</a></li>
                 <li><a href="#">FAQ</a></li>
